2004-04-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* INSTALL: Include a notice about the demise of 16-bit versions
	on MS-DOS and Windows.  Updated the paragraph about the history
	of gnuplot-mode.

	* README.1ST: Updated. Added a paragraph about PDFlib licensing.

	* README: Updated to reflect imminent release.  Changed text about
	mailing lists.  Added pointers to the web pages at SF.net.  Removed
	some mirrors that don't exist any longer.

	* src/fit.c (Dblfn): Re-initialize va_args between uses.  Needed
	to be C standard compliant and survive running on Linux/AMD64.
	(Fixes SF bug #932162).
	
2003-04-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/readline.c: Revert patch from 2003-05-10 
	"Allow <tab> characters in input stream." This broke filename auto-
	completion by gnu libreadline. Reversion re-introduces the problem that
	gnuplot's own readline makes it impossible to enter <tabs> in a command
	line.

2004-04-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* TODO: Updated.
	
	* INSTALL: Updated.

2004-04-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (looks_like_numeric): Recognize blanks and other
	special formatting characters in floating point formats correctly.

	* src/save.c (save_set_all): Moved writing of timefmt strings up
	in the list of saved settings, so 'set xtics' can have time/date
	strings as endpoints.

2004-04-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* BUGS: Removed lots of long-since fixed bugs.  Updated
	descriptions of some others.  Got rid of numbering --- it was
	completely mixed-up anyway.

	* term/win.trm: Added a note regarding the limitation of no wide,
	patterned lines in Windows terminal.

2004-04-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* BUGS: Removed point "8. contour line clipping of 3D data plots":
	it should go to FAQ or to gnuplot's web page => "Useful
	scripts". Removed point "11. bug in OS/2 emx/gcc 2.7.x optimizer"